[gd_scene load_steps=6 format=3 uid="uid://ce0u7t3kimtq3"]

[ext_resource type="Script" path="res://scripts/city_gen.gd" id="1"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dsr7jn2nmwvs4" path="res://heatmap.tres" id="3"]
[ext_resource type="Script" path="res://scripts/heatmap.gd" id="4"]
[ext_resource type="Script" path="res://scripts/main.gd" id="6"]

[node name="Node2D" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Generate"

[node name="HeatmapCheckbox" type="CheckBox" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Show population heatmap"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(15, 15)
script = ExtResource("2")
zoom_out_limit = 30

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.239216, 0.447059, 0.156863, 1)

[node name="PopulationHeatmap" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.0980392, 0.52549, 0.0627451, 1)
scale = Vector2(500, 500)
texture = ExtResource("3")
script = ExtResource("4")

[node name="CityGen" type="Node2D" parent="."]
script = ExtResource("1")

[node name="Main" type="Node2D" parent="."]
script = ExtResource("6")

[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/GenerateButton" to="Main" method="_on_GenerateButton_pressed"]
[connection signal="toggled" from="UI/MarginContainer/HBoxContainer/HeatmapCheckbox" to="Main" method="_on_HeatmapCheckbox_toggled"]
